# tilder

./: .editorconfig  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  ENVIRONMENT.md  LICENSE  LICENSE-THIRD-PARTY.md  LICENSE.md  README-dev.md  README.md  SECURITY.md  TRADEMARK_POLICY.md  cliff.toml
.cspell/: custom-dictionary-workspace.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/brand/: LICENSE-LOGOTYPE.md
.github/logo/: LICENSE  LICENSE-LOGOTYPE.md
.github/workflows/: aur.yml.future  installer.yml  release.yml
crates/tilder-core/: Cargo.toml
crates/tilder-core/src/: lib.rs  macros.rs  meta.rs  traits.rs
crates/tilder_core/: Cargo.toml
crates/tilder_core/src/: meta.rs
installer/: linux.sh
tilder/: Cargo.toml  build.rs
tilder/src/: constants.rs  main.rs
