[package]
name = "tilder"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true
build = "build.rs"

[package.metadata.tilder]
keywords.workspace = true
documentation.workspace = true

[dependencies]
## Crates project
tilder-core = { workspace = true }

## Crates vendors
clap.workspace = true

# Build dependencies (build.rs)
[build-dependencies]
toml = "0.8"
serde = { workspace = true }
